# agents-ajay

./: package-lock.json
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2_practice.ipynb  3_lab3.ipynb  4_lab4.ipynb  take_screenshot.py
2_openai/deep_research/: email_agent.py
3_crew/coder/output/: code_and_output.txt
3_crew/debate1/: pyproject.toml
3_crew/engineering_team_ajay/: README.md  accounts.py.py  design_accounts.py.txt  eenv.txt  frontend_accounts.py.py  pyproject.toml  test_accounts.py.py
3_crew/engineering_team_ajay/output/: accounts.py  design_accounts.txt  frontend_accounts.py  test_accounts.py  ui_validation_feedback.txt
3_crew/engineering_team_ajay/src/engineering_team_ajay/: crew.py  main.py
3_crew/engineering_team_ajay/src/engineering_team_ajay/config/: agents.yaml  tasks.yaml
4_langgraph/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  asyncio.ipynb  asyncio_try.py  idea1.md  idea10.md  idea12.md  idea13.md  idea14.md  idea16.md  idea17.md  idea19.md  idea2.md  idea4.md  idea5.md  idea6.md  idea7.md  idea8.md  idea9.md
5_autogen/sandbox/: flights.md
6_mcp/: 1_lab1.ipynb
(+14 files in other folders)
