[project]
name = "engineering_team_ajay"
version = "0.1.0"
description = "engineering_team_ajay using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "gradio>=5.43.1",
]

[project.scripts]
engineering_team_ajay = "engineering_team_ajay.main:run"
run_crew = "engineering_team_ajay.main:run"
train = "engineering_team_ajay.main:train"
replay = "engineering_team_ajay.main:replay"
test = "engineering_team_ajay.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
